Fix track B submission component alignments.

--- a/frontend/src/filedropper.css
+++ b/frontend/src/filedropper.css
@@ -12,7 +12,7 @@
 
 .dropzone-container {
     padding: 4rem;
-    background: #f7fafc;
+    background: var(--bs-primary-bg-subtle);
     border: 1px solid #e2e8f0;
 }
 
@@ -28,6 +28,7 @@
     font-size: 20px;
     display: block;
     cursor: pointer;
+    text-align: center;
 }
 
 .preview-container {
